--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,7 @@ header {
   width: 100%;
   height: 15rem;
   display: flex;
+  justify-content: space-between;
   gap: 3rem;
 }
 
@@ -65,10 +66,15 @@ header h1 {
 header p {
   color: var(--black);
   font-size: 1.5rem;
+  text-align: justify;
 }
 
 header img {
   height: 100%;
+}
+
+.introduction {
+  width: 50%;
 }
 
 .images {
