--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,6 @@ main {
 
 header {
   width: 100%;
-  height: 15rem;
   display: flex;
   justify-content: space-between;
   gap: 3rem;
@@ -67,6 +66,10 @@ header p {
   color: var(--black);
   font-size: 1.5rem;
   text-align: justify;
+}
+
+header .image {
+  height: 12.5rem;
 }
 
 header img {
@@ -124,4 +127,45 @@ header img {
 
 .image-list img:hover {
   transform: scale(1.05);
+}
+
+@media screen and (max-width: 900px) {
+  :root {
+    font-size: 12px;
+  }
+
+  header {
+    flex-direction: column;
+  }
+
+  header > .introduction {
+    width: 100%;
+  }
+
+  header .image {
+    order: -1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .image img {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    padding: 3rem;
+  }
+
+  .selector {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+
+  .image-list {
+    column-count: 2;
+  }
 }
