--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,11 @@
 body {
   width: 100%;
   padding: 5rem;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+
+body.scroll-disabled {
+  overflow-y: hidden;
 }
 
 main {
@@ -123,10 +127,33 @@ header img {
   width: 100%;
   margin-bottom: 1rem;
   transition: all 0.5s ease;
+  cursor: pointer;
 }
 
 .image-list img:hover {
   transform: scale(1.05);
+}
+
+.image-preview {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.image-preview > img {
+  width: 100%;
+}
+
+.image-preview.active {
+  display: flex;
 }
 
 @media screen and (max-width: 900px) {
